[package]
name = "loop-bin"
version = "0.1.3"
edition = "2021"
authors = ["Jean-Christophe Amiel <jeanchristophe.amiel@gmail.com>"]
license = "Apache-2.0"
description = "Run a command in loop, nothing else."
repository = "https://github.com/jcamiel/loop-bin"

[[bin]]
name = "loop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.1", features = ["string"] }
colored = "2.0.0"
ctrlc = { version = "3.2.4", features = ["termination"] }

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.